Fix a bug with the overlapping iphone mockups covering the masthead. Added hover interactions for buttons.

--- a/scss/_app_buttons.scss
+++ b/scss/_app_buttons.scss
@@ -1,5 +1,7 @@
 
 .app_button {
+  @extend %button_hover;
+
   display: block;
   width: 146px;
   height: 44px;
