--- a/scss/_logo_sports.scss
+++ b/scss/_logo_sports.scss
@@ -1,6 +1,8 @@
 @import "variables";
 
 .logo_sports {
+  @extend %button_hover;
+
   display: block;
   margin-inline: auto;
   text-indent: -999px;
